RichwoodNew/src/objects/Click_Through__c.object
<CustomObject>
    <fields>
        <fullName>Email_Link__c</fullName>
        <label>Email Link</label>
        <referenceTo>Email_Link__c</referenceTo>
        <relationshipLabel>Click Throughs</relationshipLabel>
        <relationshipName>Click_Throughs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Click Through</label>
    <nameField>
        <displayFormat>CT{00000}</displayFormat>
        <label>Click Through Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Click Throughs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>